# api/app/Models/User.php
@@ -14,7 +14,7 @@ class User extends Model
      *
      * @var array
      */
-    protected $fillable = ['password', 'isCompany', 'isPetSitter', 'isIndividual', 'email', 'phoneNumber', 'city', 'postalCode', 'address', 'firstname', 'lastname', 'companyName', 'siretNumber', 'website', 'keepcats', 'keepDogs', 'acceptedWeight', 'description'];
+    protected $fillable = ['password', 'isCompany', 'isPetSitter', 'isIndividual', 'email', 'phoneNumber', 'city', 'postalCode', 'address', 'firstname', 'lastname', 'companyName', 'siretNumber', 'website', 'keepcats', 'keepDogs', 'acceptedWeight', 'description', 'profilImage', 'geopos', 'imageLocation'];
 
     /**
      * The attributes that should be hidden for arrays.
@@ -22,4 +22,9 @@ class User extends Model
      * @var array
      */
     protected $hidden = ['password'];
+
+    protected $casts = [
+        'geopos' => 'array',
+        'imageLocation' => 'array'
+    ];
 }
